tests/negative/typecheck/product.orng
fn main() -> Int{(1,2)}